# dd2_routing

./: .gitignore  CMakeLists.txt  README.md  input.txt  lee_maze_visualization.py  output.txt  routing-visualization.ipynb  test_3.txt  test_5.txt  testing guide.txt
.ipynb_checkpoints/: routing-visualization-checkpoint.ipynb
DD2-Maze-Router/: CMakeLists.txt  Cell.cpp  Cell.h  CellType.h  DD2-Maze-Router.cpp  DD2-Maze-Router.h  GlobalCell.cpp  GlobalCell.h  Net.cpp  Net.h  Nets.cpp  Nets.h  Router.cpp  Router.h  TextParser.cpp  TextParser.h
Test Sets/: lee_maze_visualization.py  output.txt
Test Sets/Test_1/: input.txt  output.txt
Test Sets/Test_10/: input.txt  output.txt
Test Sets/Test_11/: input.txt  output.txt
Test Sets/Test_12/: input.txt  output.txt
Test Sets/Test_2/: input.txt  output.txt
Test Sets/Test_3/: input.txt  output.txt
Test Sets/Test_4/: input.txt  output.txt
Test Sets/Test_5/: input.txt  output.txt
Test Sets/Test_6/: input.txt  output.txt
Test Sets/Test_8/: input.txt  output.txt
Test Sets/Test_9/: input.txt  output.txt
